# agent-stock

./: .env.example  .gitignore  CLAUDE.md  TODOS.md  config.yaml  pyproject.toml  tmp.sh
.claude/: settings.local.json
config/: industry_chains.yaml
scripts/: start-lark-tunnel.bat  start_lark_tunnel.py
src/agent_stock/: __init__.py  cli.py  config.py  logging_config.py  web_server.py
src/agent_stock/agents/: __init__.py  base.py  industry_analyst.py  market_tech.py  news_collector.py  news_impact.py  orchestrator.py  report_writer.py  stock_tech.py
src/agent_stock/models/: __init__.py  contracts.py
src/agent_stock/modules/: cache.py  data_fetcher.py  indicator_engine.py  sentiment.py
src/agent_stock/modules/news_sources/: __init__.py  eastmoney.py  kimi.py
src/agent_stock/services/: lark_events.py  lark_gateway.py
src/agent_stock/templates/: industry_report.md.j2  market_tech_report.md.j2  report.md.j2
tests/: __init__.py  test_industry_analyst.py  test_market_tech.py
