[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-stock"
version = "0.1.0"
description = "智投研 — F2+F5 并行分析流水线"
requires-python = ">=3.11"
dependencies = [
    "akshare>=1.14.0",
    "pandas>=2.0.0",
    "pandas-ta>=0.3.14b",
    "aiosqlite>=0.20.0",
    "pydantic>=2.0.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "pysenti>=0.1.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
]

[project.scripts]
agent-stock = "agent_stock.cli:main"
agent-stock-web = "agent_stock.web_server:main"
agent-stock-tunnel = "scripts.start_lark_tunnel:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_stock"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
